test-utils/src/parser/snapshots/test_utils__parser__snapshot_tests__fixture_simple_function.snap
---
source: test-utils/src/parser/snapshot_tests.rs
expression: result
---
fn @0 0:
    @0 $0 $1 {
        $2 = add $0 $1
        $3 = 0x2
        $4 = mul $2 $3
        stop
        
    }
