test-utils/src/parser/snapshots/test_utils__parser__snapshot_tests__internal_calls.snap
---
source: test-utils/src/parser/snapshot_tests.rs
expression: result
---
fn @0 0:
    @0 $0 $1 {
        $2 $3 = icall @1 $0 $1
        stop
    }

fn @1 2:
    @1 $0 $1 {
        $2 = add $0 $1
        stop
    }
