test-utils/src/parser/snapshots/test_utils__parser__snapshot_tests__memory_operations.snap
---
source: test-utils/src/parser/snapshot_tests.rs
expression: result
---
fn @0 0:
    @0 {
        $0 = 0x20
        $1 = malloc $0
        $2 = 0xdeadbeef
        mstore32 $1 $2
        $3 = mload32 $1
        $4 = malloc $0
        mcopy $4 $1 $0
        stop
        
    }
