test-utils/src/parser/snapshots/test_utils__parser__snapshot_tests__simple_function.snap
---
source: test-utils/src/parser/snapshot_tests.rs
expression: result
---
fn @0 0:
    @0 $0 $1 {
        $2 = add $0 $1
        $3 = 0x0
        $4 = 0x20
        return $3 $4
    }
