test-utils/src/parser/snapshots/test_utils__parser__snapshot_tests__storage_operations.snap
---
source: test-utils/src/parser/snapshot_tests.rs
expression: result
---
fn @0 0:
    @0 {
        $0 = 0x1
        $1 = 0xabcd
        sstore $0 $1
        $2 = sload $0
        tstore $0 $1
        $3 = tload $0
        stop
        
    }
